--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "node-fetch": "^2.7.0",
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
     "uuid": "^9.0.1",
     "uuidv7": "^0.6.3"
